--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,10 +57,11 @@ dependencies:
   # firebase_core: ^1.11.0
   # firebase_messaging: ^11.2.5
   flutter_local_notifications: ^9.2.0
-  flutter_launcher_icons: ^0.9.2
+  # flutter_launcher_icons: ^0.9.2
   flutter_widget_from_html_core: ^0.8.5+1
   firebase_core: ^1.22.0
   firebase_messaging: ^13.0.2
+  icons_launcher: ^2.0.4
   # file_manager: ^1.0.0
 
 dev_dependencies:
@@ -77,11 +78,13 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
-flutter_icons:
-  # android: "launcher_icon"
-  android: true
-  ios: true
-  image_path: "assets/images/logo.png"
+icons_launcher:
+  image_path: 'assets/images/logo.png'
+  platforms:
+    android:
+      enable: true
+    ios:
+      enable: true
 
 # The following section is specific to Flutter packages.
 flutter:
@@ -92,9 +95,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -152,3 +154,7 @@ splash_screen_view:
   #info_plist_files:
   #  - 'ios/Runner/Info-Debug.plist'
   #  - 'ios/Runner/Info-Release.plist'
+
+
+# flutter pub get
+# flutter pub run icons_launcher:create
